--- a/medicalstore/medical3d.html
+++ b/medicalstore/medical3d.html
@@ -15,7 +15,7 @@
         <div class="grid2 dispgrid dispflex headerboxshadow">
             <div class="dispflex justspace">
                 <div id="logoposition" class="dispflex">RR PHARMACY</div>
-                <div>Welcome to RP Pharmacy!!</div>
+                <div>Welcome to RR Pharmacy!!</div>
             </div>
         </div>
         <div class="gridcon dispgrid">
