--- a/medicalstore/medical3d.html
+++ b/medicalstore/medical3d.html
@@ -566,7 +566,9 @@
                             <div>Rate</div>
                             <div>Amount</div>
                         </div>
-                        <div id="BillingAmount"></div>
+                        
+                        <div id="BillingAmount" class="BillingAmount"></div>
+                        
                         <div class="bordertop">Total Amount : <span id="billerAmount"></span></div>
                     </div>
                 </div>
